--- a/src/app/diasemana/diasdasemana/diasdasemana.component.html
+++ b/src/app/diasemana/diasdasemana/diasdasemana.component.html
@@ -3,17 +3,20 @@
 <head>
 </head>
 <body>
+
+<br>
+
 <div class="welcome-text">Bem vindo!</div>
 <a routerLink="/segunda-feira" routerLinkActive="active">
   <h1>Segunda-feira</h1>
 </a>
+<button routerLink="">aperte</button>
 <h1>Terça-feira</h1>
 <h1>Quarta-feira</h1>
 <h1>Quinta-feira</h1>
 <h1>Sexta-feira</h1>
 <h1>Sábado</h1>
 <h1>Domingo</h1>
-<router-outlet></router-outlet>
 <footer>© 2024 Seu Nome. Todos os direitos reservados.</footer>
 </body>
 </html>
