--- a/src/app/diasemana/segundafeira/segundafeira.component.html
+++ b/src/app/diasemana/segundafeira/segundafeira.component.html
@@ -1,2 +1,35 @@
-<h1>Seja bem vindo a segunda</h1>
+<h1>Adicionar Horário</h1>
 
+<form (ngSubmit)="InserirHora()">
+  <div>
+    <label for="dia">Dia:</label>
+    <input type="date" id="dia" [(ngModel)]="dia" name="dia" required>
+  </div>
+
+  <div>
+    <label for="horario">Horário:</label>
+    <select id="horario" [(ngModel)]="horario" name="horario" required>
+      <option [value]="13">13:00</option>
+      <option [value]="14">14:00</option>
+      <option [value]="15">15:00</option>
+      <option [value]="16">16:00</option>
+      <option [value]="17">17:00</option>
+    </select>
+  </div>
+
+  <button type="submit">Adicionar Horário</button>
+</form>
+
+<h1>Horários</h1>
+<ul *ngFor="let item of horas">
+  <li>
+    <p>{{ item.Pessoa }}, Dia: {{ item.Dia | date:'dd/MM' }}, Horário: {{ item.Horario | number:'2.0-0' }}</p>
+  </li>
+</ul>
+
+<h1>Horários Disponíveis</h1>
+<ul *ngFor="let horario of horariosDisponiveis">
+  <li>
+    <p>Horário: {{ horario | number:'2.0-0' }}</p>
+  </li>
+</ul>
