site com css por enquanto

--- a/src/app/diasemana/diasdasemana/diasdasemana.component.html
+++ b/src/app/diasemana/diasdasemana/diasdasemana.component.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 </head>
 <body>
-
-<br>
-
-<div class="welcome-text">Bem vindo!</div>
-<a routerLink="/segunda-feira" routerLinkActive="active">
-  <h1>Segunda-feira</h1>
-</a>
-<button routerLink="">aperte</button>
-<h1>Terça-feira</h1>
-<h1>Quarta-feira</h1>
-<h1>Quinta-feira</h1>
-<h1>Sexta-feira</h1>
-<h1>Sábado</h1>
-<h1>Domingo</h1>
-<footer>© 2024 Seu Nome. Todos os direitos reservados.</footer>
+<div class="container">
+  <a routerLink="/segunda-feira" routerLinkActive="active" class="button">
+    <h1 class="title">Agende seu horário</h1>
+  </a>
+  <br> <br>
+  <a routerLink="/gerencie-horarios" routerLinkActive="active" class="button">
+    <h1 class="title">Em Desenvolvimento...</h1>
+  </a>
+  <footer>© 2024 Projeto Integrador Univesp.</footer>
+</div>
 </body>
 </html>
