--- a/src/app/telalogin/telalogin.component.html
+++ b/src/app/telalogin/telalogin.component.html
@@ -1,28 +1,44 @@
-<div class="form-container">
-  <h2>Registro</h2>
-  <form (ngSubmit)="registrarUsuario()">
-    <label for="nome">Nome:</label>
-    <input type="text" id="nome" [(ngModel)]="nome" name="nome">
+<div class="d-flex justify-content-center align-items-center vh-100" id="main-container">
+  <div class="col-lg-6" id="form-column">
+    <div class="card shadow-lg" id="form-card">
+      <div class="card-body" id="form-card-body">
+        <h2 class="text-center mb-4">Cadastre-se</h2>
+        <form (ngSubmit)="registrarUsuario()" class="mb-4" id="register-form">
+          <div class="form-group" id="name-group">
+            <label for="nome">Nome:</label>
+            <input type="text" id="nome" [(ngModel)]="nome" name="nome" class="form-control">
+          </div>
 
-    <label for="senha">Senha:</label>
-    <input type="password" id="senha" [(ngModel)]="senha" name="senha">
+          <div class="form-group" id="password-group">
+            <label for="senha">Senha:</label>
+            <input type="password" id="senha" [(ngModel)]="senha" name="senha" class="form-control">
+          </div>
 
-    <label for="profissional">Profissional (1 para sim, 0 para não):</label>
-    <input type="number" id="profissional" [(ngModel)]="profissional" name="profissional" min="0" max="1">
+          <div class="form-group" id="professional-group">
+            <label for="profissional">Profissional (1 para sim, 0 para não):</label>
+            <input type="number" id="profissional" [(ngModel)]="profissional" name="profissional" min="0" max="1" class="form-control">
+          </div>
 
-    <button type="submit">Registre-se</button>
-  </form>
+          <button type="submit" class="btn btn-primary w-100" id="register-button">Registre-se</button>
+        </form>
 
-  <h2>Login</h2>
-  <form (ngSubmit)="loginUsuario()">
-    <label for="nome">Nome:</label>
-    <input type="text" id="anome" [(ngModel)]="nome" name="nome">
+        <h2 class="text-center mb-4">Login</h2>
+        <form (ngSubmit)="loginUsuario()" id="login-form">
+          <div class="form-group" id="login-name-group">
+            <label for="nome">Nome:</label>
+            <input type="text" id="anome" [(ngModel)]="nome" name="nome" class="form-control">
+          </div>
 
-    <label for="senha">Senha:</label>
-    <input type="password" id="asenha" [(ngModel)]="senha" name="senha">
+          <div class="form-group" id="login-password-group">
+            <label for="senha">Senha:</label>
+            <input type="password" id="asenha" [(ngModel)]="senha" name="senha" class="form-control">
+          </div>
 
-    <button type="submit">Entrar</button>
-  </form>
+          <button type="submit" class="btn btn-primary w-100" id="login-button">Entrar</button>
+        </form>
+      </div>
+    </div>
+  </div>
 </div>
 
 <router-outlet></router-outlet>
