--- a/src/app/diasemana/diasdasemana/diasdasemana.component.html
+++ b/src/app/diasemana/diasdasemana/diasdasemana.component.html
@@ -10,7 +10,7 @@
   </a>
   <br> <br>
   <a routerLink="/gerencie-horarios" routerLinkActive="active" class="button">
-    <h1 class="title">Em Desenvolvimento...</h1>
+    <h1 class="title">Desenvolvimento</h1>
   </a>
   <footer>© 2024 Projeto Integrador Univesp.</footer>
 </div>
